--- a/manuais/F800/index.html
+++ b/manuais/F800/index.html
@@ -1034,10 +1034,13 @@
                 </div>
 
                 <div class="equipment-showcase">
-                    <div class="equipment-image">
-                        <img src="images/Imagem1.png" alt="Fluxograma do processo operacional">
-                    </div>
-                    <p style="color: #6c757d; font-style: italic;">Fluxograma do processo operacional do equipamento</p>
+                    <iframe src="fluxograma_interativo.html" 
+                            width="100%" 
+                            height="800" 
+                            frameborder="0"
+                            style="border: none; border-radius: 8px;">
+                    </iframe>
+                    <p style="color: #6c757d; font-style: italic; margin-top: 20px;">Fluxograma interativo do processo operacional do equipamento</p>
                 </div>
 
                 <div class="highlight-box">
