--- a/manuais/F800/index.html
+++ b/manuais/F800/index.html
@@ -289,12 +289,12 @@
         
         /* Showcase do Equipamento */
         .equipment-showcase {
-            background: var(--white);
+            background: transparent;
             border-radius: 20px;
-            padding: 50px;
+            padding: 0;
             margin: 50px 0;
             text-align: center;
-            box-shadow: var(--shadow);
+            box-shadow: none;
         }
         
         .equipment-image {
@@ -1036,9 +1036,9 @@
                 <div class="equipment-showcase">
                     <iframe src="fluxograma_interativo.html" 
                             width="100%" 
-                            height="1200" 
+                            height="1100" 
                             frameborder="0"
-                            style="border: none; border-radius: 8px;">
+                            style="border: none;">
                     </iframe>
                     <p style="color: #6c757d; font-style: italic; margin-top: 20px;">Fluxograma interativo do processo operacional do equipamento</p>
                 </div>
