F800: Reduzir tamanho do fluxograma em 25% usando transform scale
- Aplicar transform: scale(0.75) para reduzir o tamanho proporcionalmente
- Manter altura do iframe em 800px
- Ajustar margin-bottom negativa para compensar espaço
- Eliminar scroll mantendo proporcionalidade

--- a/manuais/F800/index.html
+++ b/manuais/F800/index.html
@@ -1036,9 +1036,9 @@
                 <div class="equipment-showcase">
                     <iframe src="fluxograma_interativo.html" 
                             width="100%" 
-                            height="1100" 
+                            height="800" 
                             frameborder="0"
-                            style="border: none;">
+                            style="border: none; transform: scale(0.75); transform-origin: top center; margin-bottom: -200px;">
                     </iframe>
                     <p style="color: #6c757d; font-style: italic; margin-top: 20px;">Fluxograma interativo do processo operacional do equipamento</p>
                 </div>
