--- a/manuais/F800/index.html
+++ b/manuais/F800/index.html
@@ -1033,12 +1033,12 @@
                     </div>
                 </div>
 
-                <div class="equipment-showcase">
+                <div class="equipment-showcase" style="max-width: 600px; margin: 30px auto;">
                     <iframe src="fluxograma_interativo.html" 
                             width="100%" 
-                            height="800" 
+                            height="900" 
                             frameborder="0"
-                            style="border: none; transform: scale(0.75); transform-origin: top center; margin-bottom: -200px;">
+                            style="border: none;">
                     </iframe>
                     <p style="color: #6c757d; font-style: italic; margin-top: 20px;">Fluxograma interativo do processo operacional do equipamento</p>
                 </div>
