F800: Reverter para imagem estática do fluxograma
- Remover iframe do fluxograma interativo devido a problemas de dimensionamento
- Retornar para a imagem PNG original que funcionava corretamente
- Restaurar estilos originais do container showcase
- Manter consistência visual com resto da página

--- a/manuais/F800/index.html
+++ b/manuais/F800/index.html
@@ -289,12 +289,12 @@
         
         /* Showcase do Equipamento */
         .equipment-showcase {
-            background: transparent;
+            background: var(--white);
             border-radius: 20px;
-            padding: 0;
+            padding: 50px;
             margin: 50px 0;
             text-align: center;
-            box-shadow: none;
+            box-shadow: var(--shadow);
         }
         
         .equipment-image {
@@ -1033,14 +1033,11 @@
                     </div>
                 </div>
 
-                <div class="equipment-showcase" style="max-width: 450px; margin: 30px auto;">
-                    <iframe src="fluxograma_interativo.html" 
-                            width="100%" 
-                            height="675" 
-                            frameborder="0"
-                            style="border: none;">
-                    </iframe>
-                    <p style="color: #6c757d; font-style: italic; margin-top: 15px;">Fluxograma interativo do processo operacional do equipamento</p>
+                <div class="equipment-showcase">
+                    <div class="equipment-image">
+                        <img src="images/Imagem1.png" alt="Fluxograma do processo operacional">
+                    </div>
+                    <p style="color: #6c757d; font-style: italic;">Fluxograma do processo operacional do equipamento</p>
                 </div>
 
                 <div class="highlight-box">
