F800: Substituir fluxograma em inglês por versão em português
- Criar novo fluxograma em SVG totalmente em português
- Substituir imagem PNG em inglês pelo SVG traduzido
- Manter layout e estrutura do fluxograma original
- Melhorar acessibilidade com texto em português

--- a/manuais/F800/index.html
+++ b/manuais/F800/index.html
@@ -1035,7 +1035,7 @@
 
                 <div class="equipment-showcase">
                     <div class="equipment-image">
-                        <img src="images/Imagem1.png" alt="Fluxograma do processo operacional">
+                        <img src="images/fluxograma-portugues.svg" alt="Fluxograma do processo operacional">
                     </div>
                     <p style="color: #6c757d; font-style: italic;">Fluxograma do processo operacional do equipamento</p>
                 </div>
